Fix and refactoring
Some changes in code, like putting h2 or other tags out of li or ul classes.

--- a/contacts.html
+++ b/contacts.html
@@ -8,26 +8,30 @@
     </head>
     <body>
         <header>
-            <nav class="navbar">
+            <h1>Навигация</h1>
+            <h3>
+              <nav class="navbar">
                 <ul class="navbar-start">
-                    <h1>Навигация</h1>
-                    <li class="navbar-item"><a href="index.html"><h3>Главная</h3></a></li>
-                    <li class="navbar-item"><a href="info.html"><h3>Информация о сайте</h3></a></li>
+                    <li class="navbar-item"><a href="index.html">Главная</a></li>
+                    <li class="navbar-item"><a href="info.html">Информация о сайте</a></li>
+                    <li class="navbar-item"><a href="contacts.html">Контакты</a></li>
                 </ul>
               </nav>
+            </h3>
         </header>
         <main>
-            <h3 class="navbar">
+            <h3>
                 Мои контакты
             </h3>
-            
         </main>
-        <footer class="blackfooter">
+        <footer>
             <div>
-                <li class="contacts">
-                    <a href="https://vk.com/soniccooles">Мой ВК</a>
-                    <a href="https://github.com/Soniccooles?tab=repositories">Мой Гит</a>
-                </li>
+                <h2>
+                    <li class="contacts">
+                        <a href="https://vk.com/soniccooles">Мой ВК</a>
+                        <a href="https://github.com/Soniccooles?tab=repositories">Мой Гит</a>
+                    </li>
+                </h2>
             </div>
         </footer>
     </body>
