--- a/index.html
+++ b/index.html
@@ -9,34 +9,33 @@
 
   <body>
     <header>
+      <h1>Навигация</h1>
       <!-- Навигационная панель -->
-      <nav class="navbar">
-        <ul class="navbar-start"; ="flex-container";>
-            <h1>Навигация</h1>
-            <li class="navbar-item"><a href="info.html"><h3>Информация о сайте</h3></a></li>
-            <li class="navbar-item"><a href="contacts.html"><h3>Контакты</h3></a></li>
-        </ul>
-      </nav>
+      <h3>
+        <nav class="navbar">
+          <ul class="navbar-start">
+            <li class="navbar-item"><a href="index.html">Главная</a></li>
+            <li class="navbar-item"><a href="info.html">Информация о сайте</a></li>
+            <li class="navbar-item"><a href="contacts.html">Контакты</a></li>
+          </ul>
+        </nav>
+      </h3>
     </header>
     <main> <!-- Информация о себе-->
-      <p><h1>Обо мне</h1></p>
-        <p>
-          <h4>
-            Привет, меня зовут Андрей! Мне 18 лет и я только начал кодить. Люблю покушать и люблю свое дело.
-            Также люблю играть в майнкрафт, поэтому если хочешь со мной - добавляй меня в друзья в соцсетях ниже!
-            Буду рад, если заглянешь на мой UTYUG-канал и подпишешься на мой паблик вгандагде!
-          </h4>
-        </p>
-      </p>
-      <h2>Мои проекты</h2>
+      <h1>
+        Обо мне
+      </h1>
+        <h4>
+          Привет, меня зовут Андрей! Мне 18 лет и я только начал кодить. Люблю покушать и люблю свое дело.
+          Также люблю играть в майнкрафт, поэтому если хочешь со мной - добавляй меня в друзья в соцсетях ниже!
+          Буду рад, если заглянешь на мой UTYUG-канал и подпишешься на мой паблик вгандагде!
+        </h4>
+      <h2>
+        Мои проекты
+      </h2>
     </main>
     <footer class="navbar">
       <div class="project-list">
-        <div class="flex-itme"><img src="https://dummyimage.com/300x200/b8cae3/fff.png"></div>
-        <div class="flex-itme"><img src="https://dummyimage.com/300x200/b8cae3/fff.png"></div>
-        <div class="flex-itme"><img src="https://dummyimage.com/300x200/b8cae3/fff.png"></div>
-        <div class="flex-itme"><img src="https://dummyimage.com/300x200/b8cae3/fff.png"></div>
-        <div class="flex-itme"><img src="https://dummyimage.com/300x200/b8cae3/fff.png"></div>
         <div class="flex-itme"><img src="https://dummyimage.com/300x200/b8cae3/fff.png"></div>
       </div>
     </footer>
