--- a/info.html
+++ b/info.html
@@ -8,21 +8,24 @@
     </head>
     <body class="h1">
         <header>
-          <nav class="navbar">
-            <ul class="navbar-start">
-                <h1>Навигация</h1>
-                <li class="navbar-item"><a href="index.html"><h3>Главная</h3></a></li>
-                <li class="navbar-item"><a href="contacts.html"><h3>Контакты</h3></a></li>
-            </ul>
-          </nav>
+          <h1>Навигация</h1>
+          <h3>
+            <nav class="navbar">
+              <ul class="navbar-start">
+                  <li class="navbar-item"><a href="index.html">Главная</a></li>
+                  <li class="navbar-item"><a href="info.html">Информация о сайте</a></li>
+                  <li class="navbar-item"><a href="contacts.html">Контакты</a></li>
+              </ul>
+            </nav>
+          </h3>
         </header>
         <h2>Для чего создан сайт?</h1>
-        <p><h4> 
+        <h4> 
           Привет, меня зовут Андрей. Сейчас я на 1 курсе ИИТ в ЧелГУ. Это первый мой сайт - моё портфолио. 
           Постепенно на главной будут добавляться мои проекты. Так что заглчдывай иногда, чтобы увидеть что-то новое!
           Сверху можно перейти на главную страницу с проектами или на страницу с моими контактами. В будущем
           этот список страниц будет расширяться. Также в контактах есть ссылка на гитхаб, где ты скоро сможешь увидеть
           код этой страницы. Удачи!
-        </h4></p>
+        </h4>
     </body>
 </html>
